<resources>
    <string name="app_name">TakeIt</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="verPass">Verify Password</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="placeholder">Placeholder text.</string>
</resources>