<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_user"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_user" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_user" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_pass"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/etUsername"
        android:layout_alignStart="@+id/etUsername"
        android:layout_alignLeft="@+id/etUsername"
        android:drawableStart="@drawable/ic_pass" />

    <EditText
        android:id="@+id/etPasswordCheck"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_pass"
        android:ems="10"
        android:hint="@string/verPass"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:drawableStart="@drawable/ic_pass" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:id="@+id/cardView"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/etPasswordCheck"
        android:layout_centerHorizontal="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/signup"
                android:textColor="@color/fauxMint"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"/>

</RelativeLayout>
